--- a/index.html
+++ b/index.html
@@ -14,6 +14,86 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <div class="container">
+
+    <header class="top-content">
+      <div>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="https://courtland-bourgeois.github.io/">Portfolio</a>
+          <a href="#">Contact</a>
+        </nav>
+      </div>
+      <div class="bg-color">
+        <img src="images/top-image.jpg" alt="John Smith's Pic">
+        <h1>John Smith - Web Dev</h1>
+        <h3>Technology is my passion and I enjoy helping clients share that passion!</h3>
+        <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
+        <button>Lets Team Up</button>
+    </div>
+    </header>
+
+    <section class="middle-content">
+      <div class="intro">
+        <h2>Listen Up...</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum sunt adipisci quod. Dolorum esse ipsa at hic amet exercitationem possimus minus, eveniet earum similique quas quidem perferendis beatae autem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero explicabo ducimus amet mollitia aut placeat quisquam eius? Ut quisquam voluptas, veritatis fuga cupiditate rerum atque unde aliquid? Iusto, eos quam?</p>
+      </div>
+      <div class="skills">
+        <h2>Stuff I'm Good At:</h2>
+        <ul>
+          <li>Disc Golf</li>
+          <li>Coding up UI</li>
+          <li>Playing lots of video games</li>
+          <li>Using bootstrap grid</li>
+          <li>Taking long naps</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="bottom-content">
+      <div class="work-history">
+        <h2>Work History</h2>
+        <table style="width: 100%">
+          <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Apple</td>
+            <td>Software Engineer</td>
+            <td>Swift</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Microsoft</td>
+            <td>Computer Scientist</td>
+            <td>.NET</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Amazon</td>
+            <td>Dev Ops</td>
+            <td>AWS</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+
+  </div>
+
+  <div class="container-2">
+
+    <footer>
+      <h3>Contact Number: (123) 456-7890</h3>
+      <h3>Copyright Awesomeness 2018</h3>
+    </footer>
+
+  </div>
+
 </body>
 </html>
